shift images to 30px wide when navbar stops shrinking

--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -94,10 +94,10 @@ textarea{
         grid-template-rows: [top] 40px [content] 400px [bottom];
     }
     .logo {
-        max-width: 15px;
+        max-width: 30px;
     }
-    .user-image{
-        max-width: 15px;
+    .user_image{
+        max-width: 30px;
     }
 }
 
@@ -190,7 +190,7 @@ td {
 }
 
 
-#cover{
+#cover a{
     width: 5%;
     cursor: default;
 }
